refactor AiIntegrationServiceImpl