@@ -18,181 +18,63 @@ public class AiIntegrationServiceImpl implements AiIntegrationService {
     private static final Logger logger = LoggerFactory.getLogger(AiIntegrationServiceImpl.class);
     private final WebClient webClient;
 
-    public AiIntegrationServiceImpl(@Value("${python.service.baseurl}") String pythonServiceBaseUrl, WebClient.Builder webClientBuilder) {
+    public AiIntegrationServiceImpl(@Value("${python.service.baseurl}") String pythonServiceBaseUrl,
+                                    WebClient.Builder webClientBuilder) {
         this.webClient = webClientBuilder.baseUrl(pythonServiceBaseUrl).build();
         logger.info("Python AI Service Base URL: {}", pythonServiceBaseUrl);
     }
 
     @Override
-    public LearningPathDTO generateLearningPath(String domainName, Long userId, TopicPerformanceDataDTO assessmentPerformanceData) {
-        String endpoint = "/generate-learning-path"; // Ensure this matches Python's endpoint
-        // Convert List<RichAssessmentAnswerDTO> → List<Map<String,Object>> with snake_case keys
-
-        List<Map<String, Object>> assessmentAnswersSnake = Collections.emptyList();
-
-        if(!assessmentPerformanceData.getAssessmentAnswers().isEmpty()){
-            assessmentAnswersSnake = assessmentPerformanceData.getAssessmentAnswers().stream()
-                    .map(ans -> Map.<String, Object>of(
-                            "question_id",     ans.getQuestionId(),
-                            "question_text",   ans.getQuestionText(),
-                            "options",         ans.getOptions(),
-                            "selected_answer", ans.getSelectedAnswer()
-                    ))
-                    .toList();
-        }
-
-
-        List<Map<String, Object>> insightsPerformanceSnake = Collections.emptyList();
-
-        if (assessmentPerformanceData.getInsightsPerformance() != null && !assessmentPerformanceData.getInsightsPerformance().isEmpty()) {
-            insightsPerformanceSnake = assessmentPerformanceData.getInsightsPerformance().stream()
-                    .map(ins -> {
-                        List<Map<String, Object>> questionsAnsweredSnake = Collections.emptyList();
-                        if (ins.getQuestionsAnswered() != null && !ins.getQuestionsAnswered().isEmpty()) {
-                            questionsAnsweredSnake = ins.getQuestionsAnswered().stream()
-                                    .map(q -> Map.<String, Object>of(
-                                            "question_id",     q.getQuestionId(),
-                                            "question_text",   q.getQuestionText(),
-                                            "options",         q.getOptions(),
-                                            "selected_answer", q.getSelectedAnswer(),
-                                            "correct_answer",  q.getCorrectAnswer(),
-                                            "is_correct",      q.isCorrect(),
-                                            "time_taken_ms",   q.getTimeTakenMs()
-                                    ))
-                                    .toList();
-                        }
-
-                        return Map.<String, Object>of(
-                                "insight_id",         ins.getInsightId(),
-                                "insight_title",      ins.getInsightTitle(),
-                                "questions_answered", questionsAnsweredSnake,
-                                "times_shown",        ins.getTimesShown()
-                        );
-                    })
-                    .toList();
-        }
-
-        Map<String, Object> userTopicPerfData = new HashMap<>();
-        userTopicPerfData.put("user_id", assessmentPerformanceData.getUserId());
-        userTopicPerfData.put("domain_name", assessmentPerformanceData.getDomainName());
-        userTopicPerfData.put("topic_name", assessmentPerformanceData.getTopicName());
-        userTopicPerfData.put("current_level", assessmentPerformanceData.getCurrentLevel());
-        userTopicPerfData.put("assessment_answers", assessmentAnswersSnake);
-        userTopicPerfData.put("insights_performance", insightsPerformanceSnake);
-
+    public LearningPathDTO generateLearningPath(String domainName,
+                                                Long userId,
+                                                TopicPerformanceDataDTO assessmentPerformanceData) {
+        String endpoint = "/generate-learning-path";
         Map<String, Object> requestBody = Map.of(
-                "domain_name",                 domainName,
-                "user_id",                     userId,
-                "user_topic_performance_data", userTopicPerfData
+                "domain_name", domainName,
+                "user_id", userId,
+                "user_topic_performance_data", buildUserTopicPerformancePayload(assessmentPerformanceData)
         );
 
         logger.debug("Sending request to Python AI for learning path: {} with body {}", endpoint, requestBody);
 
         try {
-            return webClient.post()
-                    .uri(endpoint)
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .bodyValue(requestBody)
-                    .retrieve()
-                    .bodyToMono(LearningPathDTO.class)
-                    .block();
+            LearningPathDTO response = postForObject(endpoint, requestBody, LearningPathDTO.class);
+            if (response == null) {
+                logger.warn("Python AI service returned an empty learning path for domain {}", domainName);
+                return buildFallbackLearningPath(domainName);
+            }
+            return response;
         } catch (Exception e) {
             logger.error("Error calling Python AI service for learning path generation: {}", e.getMessage(), e);
-            LearningPathDTO fallbackPath = new LearningPathDTO();
-            fallbackPath.setDomainName(domainName);
-            fallbackPath.setTopics(Arrays.asList( // Ensure 10-20 topics as per Python constraint
-                    domainName + " Topic 1", domainName + " Topic 2", domainName + " Topic 3",
-                    domainName + " Topic 4", domainName + " Topic 5", domainName + " Topic 6",
-                    domainName + " Topic 7", domainName + " Topic 8", domainName + " Topic 9",
-                    domainName + " Topic 10"
-            ));
-            logger.warn("Returning fallback learning path for domain: {}", domainName);
-            return fallbackPath;
+            return buildFallbackLearningPath(domainName);
         }
     }
 
     @Override
-    public List<InsightGenerationRequestDTO.InsightDetailDTO> generateInsightsForTopic(
-            String domainName, String topicName, int level, Long userId,
-            TopicPerformanceDataDTO userPerformanceData
-    ) {
+    public List<InsightGenerationRequestDTO.InsightDetailDTO> generateInsightsForTopic(String domainName,
+                                                                                       String topicName,
+                                                                                       int level,
+                                                                                       Long userId,
+                                                                                       TopicPerformanceDataDTO userPerformanceData) {
         String endpoint = "/generate-insights";
-        List<Map<String, Object>> assessmentAnswersSnake = Collections.emptyList();
-        // Convert List<RichAssessmentAnswerDTO> → List<Map<String,Object>> with snake_case keys
-        if(!userPerformanceData.getAssessmentAnswers().isEmpty()){{
-            assessmentAnswersSnake = userPerformanceData.getAssessmentAnswers().stream()
-                    .map(ans -> Map.<String, Object>of(
-                            "question_id",     ans.getQuestionId(),
-                            "question_text",   ans.getQuestionText(),
-                            "options",         ans.getOptions(),
-                            "selected_answer", ans.getSelectedAnswer()
-                    ))
-                    .toList();
-        }}
-
-
-        List<Map<String, Object>> insightsPerformanceSnake = Collections.emptyList();
-
-        if (userPerformanceData.getInsightsPerformance() != null && !userPerformanceData.getInsightsPerformance().isEmpty()) {
-            insightsPerformanceSnake = userPerformanceData.getInsightsPerformance().stream()
-                    .map(ins -> {
-                        List<Map<String, Object>> questionsAnsweredSnake = Collections.emptyList();
-                        if (ins.getQuestionsAnswered() != null && !ins.getQuestionsAnswered().isEmpty()) {
-                            questionsAnsweredSnake = ins.getQuestionsAnswered().stream()
-                                    .map(q -> Map.<String, Object>of(
-                                            "question_id",     q.getQuestionId(),
-                                            "question_text",   q.getQuestionText(),
-                                            "options",         q.getOptions(),
-                                            "selected_answer", q.getSelectedAnswer(),
-                                            "correct_answer",  q.getCorrectAnswer(),
-                                            "is_correct",      q.isCorrect(),
-                                            "time_taken_ms",   q.getTimeTakenMs()
-                                    ))
-                                    .toList();
-                        }
-
-                        return Map.<String, Object>of(
-                                "insight_id",         ins.getInsightId(),
-                                "insight_title",      ins.getInsightTitle(),
-                                "questions_answered", questionsAnsweredSnake,
-                                "times_shown",        ins.getTimesShown()
-                        );
-                    })
-                    .toList();
-        }
-
-
-        Map<String, Object> userTopicPerfData = Map.of(
-                "user_id",               userPerformanceData.getUserId(),
-                "domain_name",           userPerformanceData.getDomainName(),
-                "topic_name",            userPerformanceData.getTopicName(),
-                "current_level",         userPerformanceData.getCurrentLevel(),
-                "assessment_answers",    assessmentAnswersSnake,
-                "insights_performance",  insightsPerformanceSnake
-        );
 
         Map<String, Object> requestBody = new HashMap<>();
         requestBody.put("domain_name", domainName);
         requestBody.put("topic_name", topicName);
         requestBody.put("level", level);
         requestBody.put("user_id", userId);
-        requestBody.put("user_topic_performance_data", userTopicPerfData);
+        requestBody.put("user_topic_performance_data", buildUserTopicPerformancePayload(userPerformanceData));
 
         logger.debug("Sending request to Python AI for insights generation: {} with body {}", endpoint, requestBody);
 
         try {
-            return webClient.post()
-                    .uri(endpoint)
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .bodyValue(requestBody)
-                    .retrieve()
-                    .bodyToFlux(InsightGenerationRequestDTO.InsightDetailDTO.class)
-                    .collectList()
-                    .block();
+            List<InsightGenerationRequestDTO.InsightDetailDTO> insights =
+                    postForList(endpoint, requestBody, InsightGenerationRequestDTO.InsightDetailDTO.class);
+            return insights != null ? insights : Collections.emptyList();
         } catch (Exception e) {
             logger.error("Error calling Python AI service for insight generation: {}", e.getMessage(), e);
             logger.warn("Returning empty list of insights due to error for topic: {}", topicName);
-            return new ArrayList<>();
+            return Collections.emptyList();
         }
     }
 
@@ -229,29 +111,146 @@ public class AiIntegrationServiceImpl implements AiIntegrationService {
     @Override
     public ReviewDTO generateReview(Long userId, Long topicProgressId, Map<String, Object> performanceData) {
         String endpoint = "/generate-review";
-        Map<String, Object> requestBody = Map.of(
-                "user_id", userId,
-                "topic_progress_id", topicProgressId,
-                "performance_data", performanceData
-        );
+        Map<String, Object> requestBody = new HashMap<>();
+        requestBody.put("user_id", userId);
+        requestBody.put("topic_progress_id", topicProgressId);
+        requestBody.put("performance_data", performanceData != null ? performanceData : Collections.emptyMap());
+
         logger.debug("Sending request to Python AI for review generation: {} with body {}", endpoint, requestBody);
+
         try {
-            return webClient.post()
-                    .uri(endpoint)
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .bodyValue(requestBody)
-                    .retrieve()
-                    .bodyToMono(ReviewDTO.class)
-                    .block();
+            ReviewDTO response = postForObject(endpoint, requestBody, ReviewDTO.class);
+            if (response == null) {
+                logger.warn("Python AI service returned no review for topic progress {}", topicProgressId);
+                return buildFallbackReview();
+            }
+            return response;
         } catch (Exception e) {
             logger.error("Error calling Python AI service for review generation: {}", e.getMessage(), e);
-            logger.warn("Returning dummy review due to error for topicProgressId: {}", topicProgressId);
-            return ReviewDTO.builder() // Assuming ReviewDTO has a builder
-                    .summary("A review summary could not be generated at this time. Please try again later.")
-                    .strengths(List.of("Persistence"))
-                    .weaknesses(List.of("Technical difficulties with AI review generation."))
-                    .revisionQuestions(new ArrayList<>())
-                    .build();
+            return buildFallbackReview();
         }
+    }
+
+    private <T> T postForObject(String endpoint, Object body, Class<T> responseType) {
+        return webClient.post()
+                .uri(endpoint)
+                .contentType(MediaType.APPLICATION_JSON)
+                .bodyValue(body)
+                .retrieve()
+                .bodyToMono(responseType)
+                .block();
+    }
+
+    private <T> List<T> postForList(String endpoint, Object body, Class<T> elementType) {
+        return webClient.post()
+                .uri(endpoint)
+                .contentType(MediaType.APPLICATION_JSON)
+                .bodyValue(body)
+                .retrieve()
+                .bodyToFlux(elementType)
+                .collectList()
+                .block();
+    }
+
+    private Map<String, Object> buildUserTopicPerformancePayload(TopicPerformanceDataDTO data) {
+        Map<String, Object> payload = new LinkedHashMap<>();
+        if (data == null) {
+            payload.put("assessment_answers", Collections.emptyList());
+            payload.put("insights_performance", Collections.emptyList());
+            return payload;
+        }
+
+        if (data.getUserId() != null) {
+            payload.put("user_id", data.getUserId());
+        }
+        if (data.getDomainName() != null) {
+            payload.put("domain_name", data.getDomainName());
+        }
+        if (data.getTopicName() != null) {
+            payload.put("topic_name", data.getTopicName());
+        }
+        if (data.getCurrentLevel() != null) {
+            payload.put("current_level", data.getCurrentLevel());
+        }
+
+        payload.put("assessment_answers", convertAssessmentAnswers(data.getAssessmentAnswers()));
+        payload.put("insights_performance", convertInsightPerformance(data.getInsightsPerformance()));
+        return payload;
+    }
+
+    private List<Map<String, Object>> convertAssessmentAnswers(List<RichAssessmentAnswerDTO> answers) {
+        if (answers == null || answers.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        return answers.stream()
+                .map(answer -> {
+                    Map<String, Object> map = new LinkedHashMap<>();
+                    map.put("question_id", answer.getQuestionId());
+                    map.put("question_text", answer.getQuestionText());
+                    map.put("options", answer.getOptions() != null ? answer.getOptions() : Collections.emptyList());
+                    map.put("selected_answer", answer.getSelectedAnswer());
+                    return map;
+                })
+                .toList();
+    }
+
+    private List<Map<String, Object>> convertInsightPerformance(List<InsightPerformanceDataDTO> performances) {
+        if (performances == null || performances.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        return performances.stream()
+                .map(performance -> {
+                    Map<String, Object> map = new LinkedHashMap<>();
+                    map.put("insight_id", performance.getInsightId());
+                    map.put("insight_title", performance.getInsightTitle());
+                    map.put("questions_answered", convertQuestionDetails(performance.getQuestionsAnswered()));
+                    map.put("times_shown", performance.getTimesShown());
+                    return map;
+                })
+                .toList();
+    }
+
+    private List<Map<String, Object>> convertQuestionDetails(List<UserAnswerDetailDTO> details) {
+        if (details == null || details.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        return details.stream()
+                .map(detail -> {
+                    Map<String, Object> map = new LinkedHashMap<>();
+                    map.put("question_id", detail.getQuestionId());
+                    map.put("question_text", detail.getQuestionText());
+                    map.put("options", detail.getOptions() != null ? detail.getOptions() : Collections.emptyList());
+                    map.put("selected_answer", detail.getSelectedAnswer());
+                    map.put("correct_answer", detail.getCorrectAnswer());
+                    map.put("is_correct", detail.isCorrect());
+                    map.put("time_taken_ms", detail.getTimeTakenMs());
+                    return map;
+                })
+                .toList();
+    }
+
+
+    private LearningPathDTO buildFallbackLearningPath(String domainName) {
+        LearningPathDTO fallbackPath = new LearningPathDTO();
+        fallbackPath.setDomainName(domainName);
+
+        List<String> topics = new ArrayList<>();
+        for (int i = 1; i <= 10; i++) {
+            topics.add(domainName + " Topic " + i);
+        }
+        fallbackPath.setTopics(topics);
+        return fallbackPath;
+    }
+
+    private ReviewDTO buildFallbackReview() {
+        return ReviewDTO.builder()
+                .summary("A review summary could not be generated at this time. Please try again later.")
+                .strengths(List.of("Persistence"))
+                .weaknesses(List.of("Technical difficulties with AI review generation."))
+                .revisionQuestions(new ArrayList<>())
+                .build();
     }
 }
